# Qt-Chat-Server

./: .gitignore  LICENSE  README.md  server_manager.cpp  server_manager.h
Client/: CMakeLists.txt  client_manager.cpp  client_manager.h  dialog.cpp  dialog.h  dialog.ui  main.cpp  main_window.cpp  main_window.h  main_window.ui
Server/: CMakeLists.txt  main.cpp  server_manager.cpp  server_manager.h
